--- a/blog-ukol/frontend/package.json
+++ b/blog-ukol/frontend/package.json
@@ -34,6 +34,7 @@
     "@graphql-codegen/typescript-urql": "^2.0.3",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.20",
+    "@types/sass": "^1.16.0",
     "typescript": "^4.1.3"
   }
 }
